# 2020-05-cipug-command-line-talk

./: pyproject.toml
01-tqdm/: README.md  demo1.py  demo2.py  demo3.py  demo4.py
02-json-tool/: README.md  demo1.json
03-http-server/: README.md
04-ngrok/: README.md
05-pyp/: README.md  demo1.txt
