[tool.poetry]
name = "2020-05-cipug-command-line-talk"
version = "0.1.0"
description = ""
authors = ["Paul Blampied <paul_blampied@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.46.0"
ComplexHTTPServer = "^0.3"
pypyp = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
